# jabberoo

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  build-win32  config.guess  config.h  config.h.in  configure  configure.ac  doxygen.cfg  doxygen.cfg.in  jabberoo.dsp  jabberoo.dsw  jabberoo.pc  jabberoo.pc.in  libtool  licence-header.txt
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/: JID.hh  Makefile  Makefile.am  Makefile.in  XCP.hh  discoDB.hh  filestream.hh  jabberoo-component.hh  jabberoo.hh  jabberoofwd.h  jabberoox.hh  jutil.hh  message.hh  packet.hh  packetqueue.hh  presence.hh  presenceDB.hh  roster.hh  session.hh  sha.h  vCard.h
libjudo/: .cvslog  Makefile  Makefile.am  Makefile.in  RELEASE.notes  doxygen.cfg
libjudo/src/: Element.cpp  ElementStream.cpp  Makefile  Makefile.am  Makefile.in  XPath.cpp  XPath.h  XPathFunctions.h  XPathOps.h  judo.cpp  judo.hpp
libjudo/src/expat/: Makefile  Makefile.am  Makefile.in  xmlparse.c  xmlrole.c
libjudo/src/test/: CDATATest.cpp  ElementStreamTest.cpp  ElementTest.cpp  GlobalsTest.cpp  Makefile  Makefile.am  Makefile.in  judo_test.cpp  judo_test.hpp  judo_testall.sh  xpath_tokens.cpp
python/: ChangeLog  JabberOOLink.cpp  JabberOOLink.h  JabberOOLinkSession.cpp  JabberOOLinkSigC.cpp  JudoLink.cpp  Makefile  README
src/: Makefile  Makefile.am  Makefile.in  jabberoo-JID.cc  jabberoo-XCP.cc  jabberoo-browse.cpp  jabberoo-component-session.cpp  jabberoo-disco.cpp  jabberoo-filestream.cc  jabberoo-message.cc  jabberoo-packet.cc  jabberoo-presence.cc  jabberoo-presencedb.cc  jabberoo-roster.cc  jabberoo-session.cc  jabberoo.cc  jabberoox-agent.cc  jabberoox-filter.cc  jabberoox-vcard.cc  jutil.cc  sha.c
test/: Makefile.am  filtertest.cc  itertest.cc  jidtest.cc
