libjabberoodir = $(includedir)/jabberoo

libjabberoo_HEADERS = 	\
    filestream.hh \
	jutil.hh 	\
	jabberoo.hh 	\
    jabberoo-component.hh \
	jabberoox.hh \
	vCard.h \
    discoDB.hh	\
    JID.hh	\
    message.hh	\
    packet.hh	\
    packetqueue.hh \
    presence.hh	\
    presenceDB.hh	\
    roster.hh	\
    session.hh	\
    XCP.hh	\
    jabberoofwd.h	\
    sha.h
