SUBDIRS = .
noinst_LTLIBRARIES = libexpat.la
pkginclude_HEADERS = expat.h
libexpat_la_SOURCES = ascii.h asciitab.h expat.h latin1tab.h xmlrole.h \
                     xmlparse.c xmltok.c nametab.h xmltok.h iasciitab.h \
                     utf8tab.h xmlrole.c
EXTRA_DIST = xmltok_impl.c xmltok_impl.h xmltok_ns.c

